--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -1757,6 +1757,7 @@ allow 46.8.43.110;
 allow 50.7.40.39;
 allow 5.101.82.22;
 allow 5.101.82.67;
+allow 5.101.84.151;
 allow 5.104.84.183;
 allow 5.104.86.6;
 allow 51.15.59.15;
