--- a/deny-tor_ips_v4.conf
+++ b/deny-tor_ips_v4.conf
@@ -992,6 +992,7 @@ deny 46.8.43.110;
 deny 50.7.40.39;
 deny 5.101.82.22;
 deny 5.101.82.67;
+deny 5.101.84.151;
 deny 5.104.84.183;
 deny 5.104.86.6;
 deny 51.15.59.15;
