--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -1757,6 +1757,7 @@ set_real_ip_from 46.8.43.110;
 set_real_ip_from 50.7.40.39;
 set_real_ip_from 5.101.82.22;
 set_real_ip_from 5.101.82.67;
+set_real_ip_from 5.101.84.151;
 set_real_ip_from 5.104.84.183;
 set_real_ip_from 5.104.86.6;
 set_real_ip_from 51.15.59.15;
