--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -107,7 +107,6 @@ allow 109.71.252.97;
 allow 113.20.31.38;
 allow 114.172.205.8;
 allow 114.35.245.150;
-allow 118.163.74.160;
 allow 118.193.64.139;
 allow 118.194.231.50;
 allow 118.194.234.240;
@@ -249,7 +248,6 @@ allow 185.100.87.166;
 allow 185.100.87.174;
 allow 185.100.87.41;
 allow 185.10.16.41;
-allow 185.104.120.10;
 allow 185.104.120.30;
 allow 185.104.120.40;
 allow 185.106.102.102;
@@ -728,7 +726,6 @@ allow 2001:67c:e60:c0c:192:42:116:218;
 allow 2001:67c:e60:c0c:192:42:116:219;
 allow 2001:ac8:22:43::20e5:a7d7;
 allow 2001:b011:4006:545c::b;
-allow 2001:b030:2422::7234;
 allow 2001:bc8:1640:317d:dc00:ff:fe39:7bb3;
 allow 2001:bf0:666::666;
 allow 2001:df7:7400:c10d:216:3eff:fecd:511a;
@@ -867,6 +864,7 @@ allow 212.21.66.6;
 allow 212.38.189.186;
 allow 212.69.167.80;
 allow 212.73.134.204;
+allow 212.95.50.77;
 allow 212.95.54.78;
 allow 213.232.235.104;
 allow 216.239.90.19;
@@ -1263,6 +1261,7 @@ allow 2a04:52c0:104:4735::1;
 allow 2a04:52c0:104:ad97::1;
 allow 2a04:52c0:105:78fc::1;
 allow 2a04:52c0:105:82c0::1;
+allow 2a04:52c0:105:d7eb::1;
 allow 2a04:52c0:106:394:e813:c39a:9eb9:d95b;
 allow 2a04:52c0:108:a34f::1;
 allow 2a04:52c0:116:e0e3::1;
@@ -1290,7 +1289,6 @@ allow 2a06:1700:2:148::8493:bcd8;
 allow 2a06:1700:3:19::1;
 allow 2a06:1700:3:34::1;
 allow 2a06:1700:4:14::1;
-allow 2a06:3000::10;
 allow 2a06:3000::30;
 allow 2a06:3000::40;
 allow 2a06:d380:0:103::62;
@@ -1771,6 +1769,7 @@ allow 5.196.95.34;
 allow 5.253.247.27;
 allow 5.255.100.219;
 allow 5.255.100.224;
+allow 5.255.100.26;
 allow 5.255.101.10;
 allow 5.255.103.235;
 allow 5.255.104.202;
@@ -1956,6 +1955,7 @@ allow 91.227.77.62;
 allow 91.227.77.97;
 allow 91.92.109.126;
 allow 91.92.109.43;
+allow 92.113.144.149;
 allow 92.243.24.163;
 allow 92.246.84.133;
 allow 93.113.25.239;
