--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -248,6 +248,7 @@ allow 185.100.87.166;
 allow 185.100.87.174;
 allow 185.100.87.41;
 allow 185.10.16.41;
+allow 185.104.120.10;
 allow 185.104.120.30;
 allow 185.104.120.40;
 allow 185.106.102.102;
@@ -903,22 +904,17 @@ allow 23.137.254.244;
 allow 23.151.8.8;
 allow 23.155.8.104;
 allow 23.184.48.78;
-allow 23.191.200.10;
-allow 23.191.200.11;
 allow 23.191.200.12;
 allow 23.191.200.13;
 allow 23.191.200.14;
 allow 23.191.200.15;
-allow 23.191.200.16;
 allow 23.191.200.17;
 allow 23.191.200.18;
-allow 23.191.200.19;
 allow 23.191.200.2;
 allow 23.191.200.20;
 allow 23.191.200.21;
 allow 23.191.200.22;
 allow 23.191.200.23;
-allow 23.191.200.24;
 allow 23.191.200.25;
 allow 23.191.200.26;
 allow 23.191.200.27;
@@ -932,7 +928,6 @@ allow 23.191.200.5;
 allow 23.191.200.6;
 allow 23.191.200.7;
 allow 23.191.200.8;
-allow 23.191.200.9;
 allow 23.236.122.193;
 allow 2400:8901::f03c:94ff:fe7f:59f6;
 allow 2400:8901::f03c:95ff:fe89:4a88;
@@ -1289,6 +1284,7 @@ allow 2a06:1700:2:148::8493:bcd8;
 allow 2a06:1700:3:19::1;
 allow 2a06:1700:3:34::1;
 allow 2a06:1700:4:14::1;
+allow 2a06:3000::10;
 allow 2a06:3000::30;
 allow 2a06:3000::40;
 allow 2a06:d380:0:103::62;
@@ -1504,8 +1500,6 @@ allow 2a0e:d604:1:151::2;
 allow 2a0e:e701:1198::1;
 allow 2a0e:fa00:0:30::1;
 allow 2a0f:85c1:356:3238::1;
-allow 2a0f:ca80::1260:4bff:fea4:19b0;
-allow 2a0f:ca80::2e59:e5ff:fe49:3738;
 allow 2a0f:cdc6:500:11e3::2;
 allow 2a0f:df00:0:255::194;
 allow 2a0f:df00:0:255::195;
@@ -1640,7 +1634,6 @@ allow 45.132.246.245;
 allow 45.13.225.69;
 allow 45.13.225.78;
 allow 45.133.74.53;
-allow 45.134.225.36;
 allow 45.137.70.158;
 allow 45.138.16.107;
 allow 45.138.16.113;
@@ -1831,7 +1824,6 @@ allow 77.48.28.204;
 allow 77.48.28.237;
 allow 77.48.28.239;
 allow 77.81.247.72;
-allow 78.142.18.219;
 allow 79.133.57.64;
 allow 80.241.60.207;
 allow 80.67.167.81;
