--- a/allow-tor_ips_v6.conf
+++ b/allow-tor_ips_v6.conf
@@ -451,6 +451,7 @@ allow 2a06:1700:2:148::8493:bcd8;
 allow 2a06:1700:3:19::1;
 allow 2a06:1700:3:34::1;
 allow 2a06:1700:4:14::1;
+allow 2a06:3000::10;
 allow 2a06:3000::30;
 allow 2a06:3000::40;
 allow 2a06:d380:0:103::62;
@@ -666,8 +667,6 @@ allow 2a0e:d604:1:151::2;
 allow 2a0e:e701:1198::1;
 allow 2a0e:fa00:0:30::1;
 allow 2a0f:85c1:356:3238::1;
-allow 2a0f:ca80::1260:4bff:fea4:19b0;
-allow 2a0f:ca80::2e59:e5ff:fe49:3738;
 allow 2a0f:cdc6:500:11e3::2;
 allow 2a0f:df00:0:255::194;
 allow 2a0f:df00:0:255::195;
