--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -853,7 +853,6 @@ deny 209.141.40.68;
 deny 209.141.45.141;
 deny 209.141.45.81;
 deny 209.141.46.203;
-deny 209.141.51.180;
 deny 209.141.51.30;
 deny 209.141.54.203;
 deny 209.141.54.218;
@@ -902,6 +901,7 @@ deny 23.137.253.254;
 deny 23.137.253.27;
 deny 23.137.254.244;
 deny 23.151.8.8;
+deny 23.155.8.104;
 deny 23.184.48.78;
 deny 23.191.200.10;
 deny 23.191.200.11;
@@ -961,6 +961,7 @@ deny 2600:3c03::f03c:95ff:fe5d:562;
 deny 2600:3c04::f03c:95ff:fe41:d42c;
 deny 2600:3c0a::f03c:95ff:fe5d:a877;
 deny 2600:3c0b::f03c:95ff:fefa:bdff;
+deny 2602:2e5::104;
 deny 2602:f6f6:2:2634::1;
 deny 2602:f6f6:2:ad5c::1;
 deny 2602:f6f6:2:d31a::1;
@@ -1638,6 +1639,7 @@ deny 45.132.246.245;
 deny 45.13.225.69;
 deny 45.13.225.78;
 deny 45.133.74.53;
+deny 45.134.225.36;
 deny 45.137.70.158;
 deny 45.138.16.107;
 deny 45.138.16.113;
@@ -1828,6 +1830,7 @@ deny 77.48.28.204;
 deny 77.48.28.237;
 deny 77.48.28.239;
 deny 77.81.247.72;
+deny 78.142.18.219;
 deny 79.133.57.64;
 deny 80.241.60.207;
 deny 80.67.167.81;
@@ -1951,6 +1954,7 @@ deny 91.227.77.62;
 deny 91.227.77.97;
 deny 91.92.109.126;
 deny 91.92.109.43;
+deny 92.113.144.149;
 deny 92.243.24.163;
 deny 92.246.84.133;
 deny 93.113.25.239;
