--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -124,6 +124,7 @@ deny 2600:3c03::f03c:95ff:fe5d:562;
 deny 2600:3c04::f03c:95ff:fe41:d42c;
 deny 2600:3c0a::f03c:95ff:fe5d:a877;
 deny 2600:3c0b::f03c:95ff:fefa:bdff;
+deny 2602:2e5::104;
 deny 2602:f6f6:2:2634::1;
 deny 2602:f6f6:2:ad5c::1;
 deny 2602:f6f6:2:d31a::1;
