--- a/allow-tor_ips_v6.conf
+++ b/allow-tor_ips_v6.conf
@@ -451,7 +451,6 @@ allow 2a06:1700:2:148::8493:bcd8;
 allow 2a06:1700:3:19::1;
 allow 2a06:1700:3:34::1;
 allow 2a06:1700:4:14::1;
-allow 2a06:3000::10;
 allow 2a06:3000::30;
 allow 2a06:3000::40;
 allow 2a06:d380:0:103::62;
@@ -695,6 +694,7 @@ allow 2a10:c800:1:9cc6::1;
 allow 2a11:6100:0:12:a236:9fff:fe9e:36ea;
 allow 2a11:6100:0:1467::;
 allow 2a11:6100:0:156b::;
+allow 2a12:6fc2:8000::1b1;
 allow 2a12:a800:11:1:124:198:131:108;
 allow 2a12:a800:11:1:124:198:131:223;
 allow 2a12:a800:11:1:124:198:131:253;
